Add in the list of Patterns from the HEAD first book

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <li>Pick Stuff that Matters</li>
 </ol>
 
-<p>So this is my way of embracing my suck publicly. My understanding of design patterns is poor. My mastery of CakePHP is only average. Hence to suck less at both, I have decided to create this as a learning tool to see how design patterns work in CakePHP the framework I am most familiar with.</p>
+<p>So this is my way of embracing my suck publicly. My understanding of design patterns is poor. My mastery of CakePHP is only average. Hence to suck less at both, I have decided to create this as a learning tool to see how design patterns are specifically implemented in CakePHP --- the framework I am most familiar with.</p>
 
 <p>Herein lies the danger. This is more for me to learn than for you to learn. You have been warned!</p>
 
@@ -45,6 +45,17 @@
 
 <ul>
   <li>Strategy Pattern</li>
+  <li>Observer Pattern</li>
+  <li>Decorator Pattern</li>
+  <li>Factory Pattern</li>
+  <li>Singleton Pattern</li>
+  <li>Command Pattern</li>
+  <li>Adapter and Facade Patterns</li>
+  <li>Template Method Pattern</li>
+  <li>Iterator and Composite Patterns</li>
+  <li>State Pattern</li>
+  <li>Proxy Pattern</li>
+  <li>Compound Patterns: Patterns of Patterns</li>
 </ul>
 
 
