remove The from the sub heading

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <header>
           <h1>Learn Design Patterns with CakePHP</h1>
-          <h2>Using the CakePHP as example to learn design patterns </h2>
+          <h2>Using CakePHP as example to learn design patterns </h2>
         </header>
 
         <hr>
